    not at the start time, which was producing a warning in cron.

======================================================================
18/12/2006 - EPRINTS-3.0-RC-1
======================================================================

2006-12-18 cjg
 * Changed INSERT to REPLACE on login tickets - should fix bug with IP 
    changing on laptops.

2007-01-03 tmb
 * Added more examples for Request Copy configuration (eg. first author)

2007-01-03 tmb
 * Used File::Temp for temp files in Import screen

2007-01-03 tmb
 * Moved EFetch URL out of code
 * Added filter on PubMed ID - must be an int
 * Used LWP::Simple to get PubMed XML - not wget
 * Used File::Temp for temp file in PubMed ID import
 * Added extra mappings to PubMed XML import

2007-01-08 moj
 * Set userid to be optional
 * Previous commit: Changed userid to use user dataset rather than
    document.

2007-01-08
 * Added ApacheLog import plugin for access log data

2007-01-09 cjg 
 * Changed INSERT to REPLACE on login tickets- should fix bug with IP 
    changing on laptops.
 * Added $current_lang to available data in eprint script.
 * Moved exec'ing of SystemSetting binaries into Platform so that they
    can use custom code on non-UNIX platforms.

2007-01-09 tmb
 * Used TeX::Encode to provide some handling of accented characters in
    BibTeX import.

2007-01-10 moj
 * Added user/remove action
 * Changed sure_delete to be a plugin phrase
 * Added User::Remove screen (similar to EPrint::Remove)
 * Added phrases for User::Remove

2007-01-11 tmb
 * Added first cut of metadata fields, phrases and citations for new 
    eprint types.

2007-01-11 tmb
 * Added necessary bits to make activating minimal users simple.

2007-01-16 moj
 * Added exists_and_set checks to DC exporter.

2007-01-16 cjg
 * made fileinfo not export in XML.

2007-01-16 cjg
 * made fileinfo not export in XML actually work.

2007-01-16 cjg
 * Commented out autoloader in Tex::Encode to get rid of a warning.
