@@ -6207,3 +6207,6 @@ PACKAGE: 2.2.99.2
 2007-01-16 cjg
  * Commented out autoloader in Tex::Encode to get rid of a warning.
 
+2007-01-11 moj
+ * Public::RequestCopy stores actor as user's name (if logged in)
+    or email address (if not).
